# LazyEngine

./: CMakeLists.txt  Engine.cpp  Engine.h  LazyEngine.cpp  LazyEngine.h  Module.cpp  Module.h  Scene.cpp  Scene.h  library.h  scene.cpp  scene.h
math/: consts.h  math.cpp  math.h  vector.cpp  vector.h
property/: property.cpp  property.h  rendererable.cpp  rendererable.h  transform.cpp  transform.h
render/: Colour.cpp  Colour.h  Shape.cpp  Shape.h  renderObject.cpp  renderObject.h  renderer.cpp  renderer.h  scene.cpp  scene.h
